--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,74 +30,74 @@ target_sources(VortexLib
 PUBLIC
 # "src/vortex/pch.hpp"
 
-# "src/vortex/gfx/swapchain.h"
+  "src/vortex/gfx/swapchain.h"
   "src/vortex/gfx/descriptor_buffer.h" 
   "src/vortex/gfx/descriptor_buffer.cpp" 
-# "src/vortex/gfx/texture.cpp"
-# "src/vortex/gfx/texture.h"
-# "src/vortex/gfx/texture_pool.cpp"
-# "src/vortex/gfx/texture_pool.h"
-
+  "src/vortex/gfx/texture.cpp"
+  "src/vortex/gfx/texture.h"
+  "src/vortex/gfx/texture_pool.cpp"
+  "src/vortex/gfx/texture_pool.h"
+ 
   "src/vortex/graph/optimize_probe.h" 
   "src/vortex/graph/optimize_probe.cpp"
-# "src/vortex/graph/ports.h" 
-# "src/vortex/graph/connection.h" 
-# "src/vortex/graph/interfaces.h" 
-# "src/vortex/graph/node_factory.h" 
-#
-# "src/vortex/util/lib/SPSC-Queue.h" 
-# "src/vortex/util/reflection.h" 
-# "src/vortex/util/log.h"
-# "src/vortex/util/ndi/ndi_library.h"  
-# "src/vortex/util/ndi/ndi_swapchain.h" 
-# "src/vortex/util/ndi/ndi_swapchain.cpp"
-# "src/vortex/util/rational.h"
-# "src/vortex/util/unique_any.h"
-# "src/vortex/util/common.h"
-#
-# "src/vortex/nodes/input/image_input.h"
-# "src/vortex/nodes/input/image_input.cpp"
-# "src/vortex/nodes/input/stream_input.h"
-# "src/vortex/nodes/input/stream_input.cpp"
-# "src/vortex/nodes/filter/composition.h"
-# "src/vortex/nodes/filter/blend.h"
-# "src/vortex/nodes/node_registry.h"
-#
-# "src/vortex/codec/ffmpeg/types.h" 
-# "src/vortex/codec/ffmpeg/error.h" 
-# "src/vortex/codec/ffmpeg/stream_manager.h" 
-# "src/vortex/codec/ffmpeg/stream_manager.cpp" 
-# "src/vortex/codec/ffmpeg/hw_decoder.h" 
-# "src/vortex/codec/ffmpeg/audio_resampler.h" 
-# "src/vortex/codec/ffmpeg/audio_resampler.cpp"
-# "src/vortex/codec/ffmpeg/codec_ffmpeg.h" 
-# "src/vortex/codec/ffmpeg/codec_ffmpeg.cpp" 
-#
-# "src/vortex/sync/wall_clock.h"
-# "src/vortex/sync/timeline.h"
-#
- "src/vortex/ui/sdl.h"
- "src/vortex/ui/sdl.cpp"
-
-# "src/vortex/consts.h" 
-# "src/vortex/probe.h" 
-
- "src/vortex/platform.cpp" 
- "src/vortex/platform.h" 
- "src/vortex/graphics.cpp" 
- "src/vortex/graphics.h"
- "src/vortex/model.h" 
- "src/vortex/model.cpp" 
+  "src/vortex/graph/ports.h" 
+  "src/vortex/graph/connection.h" 
+  "src/vortex/graph/interfaces.h" 
+  "src/vortex/graph/node_factory.h" 
+ 
+  "src/vortex/util/lib/SPSC-Queue.h" 
+  "src/vortex/util/reflection.h" 
+  "src/vortex/util/log.h"
+  "src/vortex/util/ndi/ndi_library.h"  
+  "src/vortex/util/ndi/ndi_swapchain.h" 
+  "src/vortex/util/ndi/ndi_swapchain.cpp"
+  "src/vortex/util/rational.h"
+  "src/vortex/util/unique_any.h"
+  "src/vortex/util/common.h"
+ 
+  "src/vortex/nodes/input/image_input.h"
+  "src/vortex/nodes/input/image_input.cpp"
+  "src/vortex/nodes/input/stream_input.h"
+  "src/vortex/nodes/input/stream_input.cpp"
+  "src/vortex/nodes/filter/composition.h"
+  "src/vortex/nodes/filter/blend.h"
+  "src/vortex/nodes/node_registry.h"
+ 
+  "src/vortex/codec/ffmpeg/types.h" 
+  "src/vortex/codec/ffmpeg/error.h" 
+  "src/vortex/codec/ffmpeg/stream_manager.h" 
+  "src/vortex/codec/ffmpeg/stream_manager.cpp" 
+  "src/vortex/codec/ffmpeg/hw_decoder.h" 
+  "src/vortex/codec/ffmpeg/audio_resampler.h" 
+  "src/vortex/codec/ffmpeg/audio_resampler.cpp"
+  "src/vortex/codec/ffmpeg/codec_ffmpeg.h" 
+  "src/vortex/codec/ffmpeg/codec_ffmpeg.cpp" 
+ 
+  "src/vortex/sync/wall_clock.h"
+  "src/vortex/sync/timeline.h"
+ 
+  "src/vortex/ui/sdl.h"
+  "src/vortex/ui/sdl.cpp"
   
-# "src/vortex/util/lazy.h"  
+  "src/vortex/consts.h" 
+  "src/vortex/probe.h" 
+  
+  "src/vortex/platform.cpp" 
+  "src/vortex/platform.h" 
+  "src/vortex/graphics.cpp" 
+  "src/vortex/graphics.h"
+  "src/vortex/model.h" 
+  "src/vortex/model.cpp" 
+  
+  "src/vortex/util/lazy.h"  
   "src/vortex/util/interprocess_lock.h" 
   "src/vortex/util/interprocess_lock.cpp" 
-# "src/vortex/nodes/output/ndi_output.cpp" 
-# "src/vortex/audio/audio_buffer.h" 
-# "src/vortex/util/byte_ring.h"  
-# "src/vortex/audio/audio_resampler.h" 
-# "src/vortex/ui/message_dispatch.h" 
-# "src/vortex/util/bench_clock.h" 
+  "src/vortex/nodes/output/ndi_output.cpp" 
+  "src/vortex/audio/audio_buffer.h" 
+  "src/vortex/util/byte_ring.h"  
+  "src/vortex/audio/audio_resampler.h" 
+  "src/vortex/ui/message_dispatch.h" 
+  "src/vortex/util/bench_clock.h" 
 
  "src/vortex/util/main_args.h")
 
