--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,7 @@ PUBLIC
   "src/vortex/ui/message_dispatch.h" 
   "src/vortex/util/bench_clock.h" 
 
- "src/vortex/util/main_args.h")
+ "src/vortex/util/main_args.h"  )
 
 target_include_directories(VortexLib PUBLIC "src")
 set_target_properties(VortexLib PROPERTIES
@@ -114,6 +114,7 @@ target_link_libraries(VortexLib
     spdlog::spdlog_header_only
     SDL3::SDL3
     NDI::NDI
+    utf8cpp
     
     FFmpeg::FFmpeg
     frozen::frozen-headers
@@ -147,8 +148,10 @@ PRIVATE
   "src/vortex/ui/value.h" 
   "src/vortex/ui/call_handler.h"  
 
+  "src/vortex/util/term/input.h"
+
   "src/vortex/app.h"
-)
+ "src/vortex/util/term/impl.win32.h" "src/vortex/util/term/impl.win32.cpp" "src/vortex/util/term/impl.posix.cpp" "src/vortex/util/term/shared.h" "src/vortex/util/term/input.cpp" "src/vortex/util/term/log_sink.h" "src/vortex/util/term/log_sink.cpp")
 target_compile_options(${PROJECT_NAME} PRIVATE
   $<$<CXX_COMPILER_ID:GNU>:-Wno-interference-size>
   $<$<CXX_COMPILER_ID:Clang>:-Wno-interference-size>
